--- a/resources/sass/_parallax.scss
+++ b/resources/sass/_parallax.scss
@@ -271,6 +271,7 @@
 .parallax_content_wrapper {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
   padding: 20px 10px 20px 10px;
   background-color: $white;
